--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap"
       rel="stylesheet"
     />
-    <script async
+    <script 
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8-Slp1_6mc1Qb3WMOy3_lEPKRoTLUnZg&libraries=places&callback=initMap">
     </script>
     <title>Kloud Realty</title>
