--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <script 
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8-Slp1_6mc1Qb3WMOy3_lEPKRoTLUnZg&libraries=places&callback=initMap">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8-Slp1_6mc1Qb3WMOy3_lEPKRoTLUnZg&libraries=places">
     </script>
     <title>Kloud Realty</title>
   </head>
